update demo rest application to spring-boot 3